fix overflow

--- a/src/sections/allProducts__products/style.scss
+++ b/src/sections/allProducts__products/style.scss
@@ -1,5 +1,6 @@
 .allProducts__products {
   margin-bottom: 100px;
+  overflow: unset;
   &__container {
     position: relative;
   }
